# city-infrastructure-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prepare-azure-scripts.example  .release-please-manifest.json  .travis.yml  CHANGELOG.md  Dockerfile  README.md  azure-download-files.sh  azure-download-icons.sh  azure-migrate-from-old-storage.sh  azure-pipelines-devtest.yml  azure-pipelines-stageprod.yml  azurite-cleanup.sh  azurite-init.sh  azurite-upload-files.sh  azurite-upload-icons.sh  check-open-api-schema.sh  compilemessages.sh  docker-compose.azurite.yml  docker-compose.elastic.yml  docker-compose.yml  docker-entrypoint.sh  generate-openapi-schema.sh  makemessages.sh  manage.py  post-update  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup-hooks.sh  setup.cfg  setup.py  svg_icons_to_png.py  uwsgi_docker.ini
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: python-app.yml  release-please.yml
admin_helper/: apps.py  decorators.py
admin_helper/tests/: test_list_admin_models.py  test_suggest_queryset_optimizations.py
auditlog_custom/: middleware.py
azure_client_ip/: apps.py  middleware.py  test_middleware.py
city-infrastructure-platform/: __init__.py  exceptions.py  openapi.md  settings.py  urls.py  utils.py  views.py  wsgi.py
city-infrastructure-platform/tests/: test_views.py
city_furniture/: apps.py  enums.py  filters.py  forms.py  signals.py
city_furniture/admin/: __init__.py  common.py  furniture_signpost.py  responsible_entity.py  utils.py
city_furniture/data/: city_furniture_device_types.csv
city_furniture/migrations/: 0001_initial_city_furniture.py  0002_initial_colors.py  0003_responsible_entity.py  0004_responsible_entity_organization_level.py  0005_remove_project_id_field.py  0006_responsible_entity_mptt.py  0007_group_responsible_entity.py  0008_move_responsible_entity.py  0009_move_responsible_entity.py  0010_localize_fields.py  0011_help_texts.py  0012_defaults_from_model_to_admin_form_initial_values.py  0013_device_users_nullable.py  0014_alter_cityfurniturecolor_rgb.py  0015_nullable_direction.py  0016_source_id_source_name_unique_for_active_objects.py  0017_alter_furnituresignpostplan_created_by_and_more.py  0018_alter_furnituresignpostplan_height_and_more.py  0019_furnituresignpostreal_city_furniture_furnituresignpostreal_unique_furniture_signpost_plan_id.py  0020_cityfurnituredevicetypeicon_and_more.py  0020_remove_furnituresignpostplan_order_and_more.py  0021_alter_cityfurnituredevicetypeicon_options_and_more.py  0021_cityfurnituredevicetypeicon_and_more.py  0022_alter_cityfurnituredevicetype_icon_file.py  0022_alter_cityfurnituredevicetypeicon_file.py  0023_remove_cityfurnituredevicetype_icon.py  0024_cityfurnituredevicetypeicon_is_public_and_more.py  0025_alter_furnituresignpostplan_direction_and_more.py  0026_set_device_type_non_nullable.py  0027_make_device_type_non_nullable.py  0028_alter_furnituresignpostplan_device_type_and_more.py  0029_alter_cityfurnituredevicetype_icon_file.py
city_furniture/models/: __init__.py  common.py  furniture_signpost.py  responsible_entity.py
city_furniture/resources/: __init__.py  common.py  furniture_signpost.py
city_furniture/serializers/: city_furniture_color.py  city_furniture_device_type.py  city_furniture_target.py  furniture_signpost.py  responsible_entity.py
city_furniture/tests/: factories.py  test_city_furniture_color_api.py  test_city_furniture_device_type_api.py  test_city_furniture_device_type_icon.py  test_city_furniture_target_api.py  test_furniture_signpost_api.py  test_furniture_signpost_import_export.py  test_furniture_signpost_wfs.py  test_responsible_entity_api.py  test_responsible_entity_api_permission.py
city_furniture/views/: city_furniture_color.py  city_furniture_device_type.py  city_furniture_target.py  common.py  furniture_signpost.py  responsible_entity.py  wfs.py
city_infra_instructions/: apps.py  urls.py  views.py
cityinfra/: __init__.py  drf_utils.py  exceptions.py  local_settings.py.example  openapi.md  settings.py  urls.py  views.py  wsgi.py
cityinfra/admin/: views.py
cityinfra/context_processors/: __init__.py  git_version.py
cityinfra/tests/: test_auditlog_gdpr_compliance.py  test_context_processors.py  test_non_leaky_azure_storage.py  test_nplusone_errors.py  test_resilient_logger_gdpr_compliance.py  test_views.py
deployment/: apps.py  middleware.py  test_middleware.py
docs/: traffic_sign_import_v2_analysis_reports.md  traffic_sign_import_v2_code_transformations.md
drf_custom_auth/: authentication.py  middleware.py
drf_custom_auth/tests/: test_authentication.py
hooks/: commit-msg
maintenance_mode/: README.md  __init__.py  admin.py  apps.py  middleware.py  models.py
maintenance_mode/migrations/: 0001_initial.py
maintenance_mode/tests/: __init__.py  test_language_detection.py  test_maintenance_mode.py  test_path_handling.py
map/: admin.py  apps.py  models.py  validators.py  views.py
map-view/: .prettierignore  .yarnrc  .yarnrc.yml  README.md  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.js
map-view/public/: index.html
map-view/src/: App.css  App.tsx  (+7 more)
openshift_client_ip/: apps.py  middleware.py  test_middleware.py
pipelines/: cityinfra-api-dev.yml  cityinfra-api-devtest.yml  cityinfra-api-release.yml  cityinfra-api-review.yml
scripts/: azure-download-files.sh  azurite-init.sh  azurite-upload-icons.sh  check-open-api-schema.sh  makemessages.sh
site_alert/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
tests/: test_dummy.py
traffic_control/: admin.py  api.py  apps.py  common_strings.py  constants.py  db_utils.py  decorators.py  enums.py  exceptions.py  factories.py  file_registry.py  filters.py  forms.py  geometry_utils.py  mixins.py  models.py  permissions.py  schema.py  serializers.py  signal_utils.py  signals.py  templatetags.py  utils.py  validators.py  views.py
users/: admin.py  api.py  apps.py  models.py  signals.py  utils.py
uwsgi/: docker.ini  donotlog-health.ini
(+645 files in other folders)
