[tool.poetry]
name = "city-infrastructure-platform"
version = "1.3.0"
description = ""
authors = []


[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.18"

django-auditlog = "^1.0.0"
django-colorfield = "^0.8.0"
django-cors-headers = "^3.14.0"
django-enumfields = "^2.1.1"
django-environ = "^0.10.0"
django-extensions = "^3.2.1"
django-filter = "^23.1"
django-gisserver = "1.2.5"
django-health-check = "^3.17.0"
django-helusers = "^0.7.1"
django-import-export = "^2.7.1"
django-mptt = "^0.14.0"
django-storages = { extras = ["azure"], version = "^1.13.2" }
djangorestframework = "^3.14.0"
djangorestframework-gis = "^1.0.0"
docutils = "^0.19"
drf-nested-routers = "^0.93.4"
drf-oidc-auth = "^2.0.0"
drf-spectacular = "0.25.0"
jsonschema = "^4.17.3"
psycopg2 = "^2.9.6"
python-dateutil = "^2.8.2"
pytz = "^2021.3"
requests = "^2.29.0"
rsa = "^4.6"
sentry-sdk = "^1.21.1"
social-auth-app-django = "^5.2.0"
uWSGI = "^2.0.21"


[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autopep8 = "^1.6.0"
black = "^22.1.0"
bump2version = "^1.0.1"
coverage = { version = "6.5.0", extras = ["toml"] }
factory-boy = "^3.2.1"
flake8 = "^5.0.4"
flake8-pyproject = "^1.2.2"
importmagic = "^0.1.7"
ipython = "^8.10.0"
isort = "^5.10.1"
jedi = "^0.18.1"
pep8-naming = "^0.12.1"
pydocstyle = "^6.1.1"
pyobjc-core = { version = "^8.2", platform = "darwin" }
pyobjc-framework-Cocoa = { version = "^8.2", platform = "darwin" }
pyobjc-framework-FSEvents = { version = "^8.2", platform = "darwin" }
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
pytest-watch = "^4.2.0"
rope = "^0.22.0"
yapf = "^0.32.0"


[tool.black]
extend-exclude = "migrations"
line_length = 120


[tool.isort]
skip = ["migrations", "venv"]
line_length = 120
atomic = true
combine_as_imports = true
indent = 4
length_sort = false
multi_line_output = 3
order_by_type = false
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


[tool.flake8]
exclude = ["migrations", "venv"]
max-line-length = 120
max-complexity = 10


[tool.pydocstyle]
match_dir = '[^\.,venv,migrations].*'
ignore = ["D100", "D104", "D105", "D200", "D203", "D400"]


[tool.pytest.ini_options]
norecursedirs = ["node_modules", ".git", "venv"]
DJANGO_SETTINGS_MODULE = "city-infrastructure-platform.settings"
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE",
]


[tool.coverage.run]
branch = true
omit = ["*/migrations/*", "venv/*"]
