[tool.poetry]
name = "city-infrastructure-platform"
version = "1.32.0"
description = ""
authors = []


[tool.poetry.dependencies]
python = "^3.11.9"
django = "^5.2"

cairosvg = "^2.7.1"
django-auditlog = "^3.0.0"
django-colorfield = "^0.11.0"
django-cors-headers = "^4.3.1"
django-enumfields2 = "^3.0.2"
django-environ = "^0.11.2"
django-extensions = "^4.1"
django-filter = "^23.5"
django-gisserver = "^1.5.0"
django-health-check = "^3.18.3"
django-helusers = "0.14.2"
django-import-export = "^3.2.0"
django-mptt = "^0.18.0"
django-storages = { extras = ["azure"], version = "^1.13.2" }
djangorestframework = "^3.15.2"
djangorestframework-gis = "^1.0.0"
docutils = "^0.19"
drf-nested-routers = "^0.93.4"
drf-oidc-auth = "^3.0.0"
drf-spectacular = "^0.29.0"
jsonschema = "^4.19.0"
psycopg2 = "^2.9.6"
python-dateutil = "^2.8.2"
pytz = "2023.3.post1"
requests = "^2.32.4"
rsa = "^4.6"
sentry-sdk = "^2.8.0"
social-auth-app-django = "^5.6.0"
uWSGI = "^2.0.22"
django-advanced-password-validation = "^1.2.0"
django-axes = "^7.0.0"
django-admin-confirm = "^1.0.1"
django-guardian = "^3.2.0"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
coverage = "7.4.0"
django-debug-toolbar = "^4.1.0"
djlint = "^1.32.1"
factory-boy = "^3.2.1"
ipython = "^8.10.0"
jedi = "^0.18.1"
pyobjc-core = { version = "^8.2", platform = "darwin" }
pyobjc-framework-Cocoa = { version = "^8.2", platform = "darwin" }
pyobjc-framework-FSEvents = { version = "^8.2", platform = "darwin" }
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-watch = "^4.2.0"
rope = "^1.7.0"
ruff = "^0.1.9"
requests-mock = "^1.11.0"


[tool.ruff]
extend-select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "C90", # mccabe
    "I",   # isort
]
extend-exclude = ["migrations"]
line-length = 120

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = false


[tool.djlint]
ignore = "T003,H023,H030,H031"
use_gitignore = true
extend_exclude = "map-view"
profile = "django"
max_line_length = 120
max_blank_lines = 1
max_attribute_length = 20
close_void_tags = true


[tool.pydocstyle]
match_dir = '[^\.,venv,migrations].*'
ignore = ["D100", "D104", "D105", "D200", "D203", "D400"]


[tool.pytest.ini_options]
norecursedirs = ["node_modules", ".git", "venv"]
DJANGO_SETTINGS_MODULE = "cityinfra.settings"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
]
filterwarnings = [
    "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated.:django.utils.deprecation.RemovedInDjango60Warning",
]


[tool.coverage.run]
branch = true
omit = ["*/migrations/*", "venv/*", "*/tests/*", "test_*.py"]
