[project]
name = "city-infrastructure-platform"
version = "1.37.0"
description = ""
authors = []
requires-python = ">=3.11.9,<4"
dependencies = [
    "django>=5.2,<6",
    "cairosvg>=2.9.0,<3",
    "django-auditlog>=3.0.0,<4",
    "django-colorfield>=0.11.0,<0.12",
    "django-cors-headers>=4.3.1,<5",
    "django-enumfields2>=3.0.2,<4",
    "django-environ>=0.11.2,<0.12",
    "django-extensions>=4.1,<5",
    "django-filter>=23.5,<24",
    "django-gisserver>=1.5.0,<2",
    "django-health-check>=3.18.3,<4",
    "django-helusers==1.1.0",
    "django-import-export>=3.2.0,<4",
    "django-mptt>=0.18.0,<0.19",
    "django-storages[azure]>=1.13.2,<2",
    "djangorestframework>=3.15.2,<4",
    "djangorestframework-gis>=1.0.0,<2",
    "docutils>=0.19,<0.20",
    "drf-nested-routers>=0.93.4,<0.94",
    "drf-oidc-auth>=3.0.0,<4",
    "drf-spectacular>=0.29.0,<0.30",
    "jsonschema>=4.19.0,<5",
    "psycopg2>=2.9.6,<3",
    "python-dateutil>=2.8.2,<3",
    "pytz==2023.3.post1",
    "requests>=2.33.0,<3",
    "rsa>=4.6,<5",
    "sentry-sdk>=2.8.0,<3",
    "social-auth-app-django>=5.6.0,<6",
    "uWSGI>=2.0.22,<3",
    "django-advanced-password-validation>=1.2.0,<2",
    "django-axes>=7.0.0,<8",
    "django-admin-confirm>=1.0.1,<2",
    "django-guardian>=3.2.0,<4",
    "django-admin-rangefilter>=0.13.5,<0.14",
]

[dependency-groups]
dev = [
    "bump2version>=1.0.1,<2",
    "coverage==7.4.0",
    "django-debug-toolbar>=4.1.0,<5",
    "djlint>=1.32.1,<2",
    "factory-boy>=3.2.1,<4",
    "ipython>=8.10.0,<9",
    "jedi>=0.18.1,<0.19",
    "pyobjc-core>=8.2,<9 ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=8.2,<9 ; sys_platform == 'darwin'",
    "pyobjc-framework-FSEvents>=8.2,<9 ; sys_platform == 'darwin'",
    "pytest>=7.3.1,<8",
    "pytest-cov>=4.0.0,<5",
    "pytest-django>=4.5.2,<5",
    "pytest-watch>=4.2.0,<5",
    "rope>=1.7.0,<2",
    "ruff>=0.1.9,<0.2",
    "requests-mock>=1.11.0,<2",
    "django-zeal>=2.1.0",
]

[tool.uv]
default-groups = "all"
exclude-newer = "P7D"
package = false
required-version = "0.11.3"

[tool.ruff]
extend-select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "C90", # mccabe
    "I",   # isort
]
extend-exclude = ["migrations"]
line-length = 120

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = false


[tool.djlint]
# T003: Endblock should have name
# H023: Entity references must end with a semicolon
# H030: Consider adding meta tag to viewport
# H031: Consider adding meta tag to cache-control
# H021: Inline styles should be avoided - necessary for email client compatibility
ignore = "T003,H023,H030,H031,H021"
use_gitignore = true
extend_exclude = "map-view"
profile = "django"
max_line_length = 120
max_blank_lines = 1
max_attribute_length = 20
close_void_tags = true


[tool.pydocstyle]
match_dir = '[^\.,venv,.venv,migrations].*'
ignore = ["D100", "D104", "D105", "D200", "D203", "D400"]


[tool.pytest.ini_options]
norecursedirs = ["node_modules", ".git", "venv", ".venv"]
DJANGO_SETTINGS_MODULE = "cityinfra.settings"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
]
filterwarnings = [
    "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated.:django.utils.deprecation.RemovedInDjango60Warning",
]


[tool.coverage.run]
branch = true
omit = ["*/migrations/*", "venv/*", ".venv/*", "*/tests/*", "test_*.py"]
